[tool.poetry]
name = "quarto"
version = "0.1.0"
description = ""
authors = ["Salvo-kun <s295798@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
ipykernel = "^6.17.0"
tabulate = "^0.9.0"
tqdm = "^4.64.1"
ipywidgets = "7.7.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
